--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -57,7 +57,7 @@
 
 			<p:commandButton value="back" action="#{agreementEditPB.cancel()}"
 				ajax="false" />
-			<p:commandButton action="#{contractManager.editAgreement()}" value="toEditMode" 
+			<p:commandButton action="#{contractManager.editContract()}" value="toEditMode" 
 			ajax="false"></p:commandButton>
 
 
