--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -22,7 +22,7 @@
 				</p:commandLink>
 			</p:column>
 			<p:column>
-				<p:commandButton id="downloadButton" ajax="false" icon="ui-icon-arrowthichk-s">
+				<p:commandButton id="downloadButton" ajax="false" icon="ui-icon-arrowthick-1-s">
 					<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
 				</p:commandButton>
 				<p:tooltip for="downloadButton" value="Download" showEffect="fade" hideEffect="fade" />
