--- a/Jama/src/main/webapp/home.xhtml
+++ b/Jama/src/main/webapp/home.xhtml
@@ -11,6 +11,7 @@
 	<h:form>
 		<h:outputText value="Cosa vuoi fare oggi?" styleClass="text" />
 		<h:commandButton value="Crea Convenzione" action="#{contractManager.createAgreement()}" styleClass="buttons" />
+		<h:commandButton action="#{contractManager.createFunding()}" value="Crea Contributo" styleClass="buttons" />
 		<h:button value="Lista convenzioni" outcome="agreementList" styleClass="buttons" />
 		<h:button value="Scadenzario" outcome="agreementSchedule" styleClass="buttons" />
 	</h:form>
