--- a/Jama/src/main/webapp/resources/dialogs/chiefDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/chiefDialog.xhtml
@@ -20,6 +20,10 @@
 				<h:outputText value="#{msgs.surname}:" />
 				<h:inputText id="chiefLastName" value="#{chiefDialogPCB.chief.surname}" label="#{msgs.surname}" required="true" />
 				<h:message for="chiefLastName" />
+				
+				<h:outputText value="serialllll" />
+				<h:inputText id="chiefSerialNumber" value="#{chiefDialogPCB.chief.serialNumber}" label="ddd" required="true" />
+				<h:message for="chiefSerialNumber" />
 
 				<br />
 
